# supervictor

./: .claudeignore  .cursorrules  .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Quickstart  README.md  build.rs  cert-check.py  docker-compose.yml  ping_aws.sh  pyproject.toml  qs  ruff.toml  rust-toolchain.toml
.agents/rules/: rust-no-std.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: fix.md
.cursor/rules/: general.mdc  rust-no-std.mdc
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: detect-device.sh  test.sh
.github/workflows/: deploy_cloud.yml  docs.yml  python_ci.yml  release.yml  rust_ci.yml
api/: __main__.py
cli/: Cargo.toml
cli/src/: config.rs  env.rs  error.rs  lib.rs  main.rs  output.rs  preflight.rs  preflight_tests.rs  runner.rs  rust_tools.rs  sam.rs  sam_tests.rs
cli/src/commands/: certs.rs  dev.rs  dev_tests.rs  edge.rs  edge_tests.rs  mod.rs  ping.rs  prod.rs  prod_tests.rs  staging.rs  truststore.rs
cli/src/commands/onboard/: certs.rs  flash.rs  mod.rs  preflight.rs  register.rs  server.rs  verify.rs
cli/tests/: test_config.rs  test_edge.rs  test_output.rs
cloud/: .gitignore  CLAUDE.md  Caddyfile  Makefile  NODEPS.md  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.yaml
cloud/events/: event_mtls.json
cloud/hello_world/: pyproject.toml
cloud/scripts/: gen_certs.sh
cloud/tests/integration/: test_api_gateway.py
cloud/tests/unit/: test_compose_config.py  test_gen_certs_server.py  test_handler.py  test_handlers_register.py  test_health.py  test_middleware.py  test_openapi.py  test_server.py  test_server_register.py  test_store_dynamo.py  test_store_factory.py  test_store_sqlite.py
cloud/uplink/: Dockerfile  app.py  handlers.py  middleware.py  models.py  pyproject.toml  requirements.txt  store.py  store_dynamo.py  store_factory.py  store_sqlite.py
device/: CLAUDE.md  Cargo.toml  NODEPS.md  Quickstart  build.rs  rust-toolchain.toml
device/.cargo/: config.toml
device/examples/: tls_dns_dhcp_wifi.rs
device/src/: config.rs  error.rs  error_tests.rs  lib.rs
device/src/app/: tasks.rs
device/src/models/: mod.rs  nfc.rs  nfc_tests.rs
device/src/network/: dns.rs  dns_tests.rs  http.rs  http_edge_tests.rs  http_gap_tests.rs  mod.rs  server.rs  server_tests.rs  tls.rs
device/tests/: deployed_roundtrip.rs  mock_tcp_roundtrip.rs  remote_mtls_roundtrip.rs  sam_local_roundtrip.rs
docs/: index.html
endpoint/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  samconfig.toml  template.yaml
endpoint/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
endpoint/src/store/: dynamo.rs  factory.rs  mod.rs  sqlite.rs
endpoint/tests/: test_routes.rs  test_store_factory.rs  test_store_sqlite.rs
esp-idf/: CLAUDE.md  CMakeLists.txt  quickstart.sh  sdkconfig.defaults  sdkconfig.old
esp-idf/docs/: index.html
esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  config.h  error.c  error.h  idf_component.yml  main.c
esp-idf/main/app/: uplink_task.c  uplink_task.h  wifi_ap.c  wifi_ap.h  wifi_sta.c  wifi_sta.h
esp-idf/main/models/: nfc.h  uplink.c  uplink.h
esp-idf/main/network/: dns.c  dns.h  http.c  http.h  server.c  server.h  tls.c  tls.h
esp-idf/test/: CMakeLists.txt  test_dns.c  test_error.c  test_http.c  test_server.c  test_uplink.c
examples/: aync_wifi_https.rs  hello_world.rs  my_wifi.rs  tls_dns_dhcp_wifi.rs  tls_verify.rs  wifi_embassy_dhcp.rs
quickstart/: __main__.py  config.py  env.py  output.py  preflight.py  runner.py  rust.py  sam.py
quickstart/commands/: billing.py  certs.py  dev.py  edge.py  onboard.py  onboard_runner.py  onboard_types.py  ping.py  prod.py  register.py  staging.py
quickstart/commands/onboard_phases/: phase_certs.py  phase_flash.py  phase_preflight.py  phase_register.py  phase_server.py  phase_server_compose.py  phase_verify.py
quickstart/tests/: test_commands.py  test_compose_cleanup.py  test_config.py  test_device_ca_path_wiring.py  test_edge.py  test_env.py  test_flash_ca_path.py  test_onboard_phases.py  test_onboard_runner.py  test_output.py  test_phase_server_compose.py  test_portal_command.py  test_preflight.py  test_prod.py  test_runner.py  test_runner_log_to.py  test_sam.py  test_stack_endpoint.py
src/: config.rs  constants.rs  http.rs  lib.rs  models.rs  network.rs  tasks.rs  utils.rs
src/app/: tasks.rs
src/models/: mod.rs  uplink.rs
src/network/: desktop.rs  embedded.rs  http.rs  mod.rs  tls.rs  utils.rs
src/utils/: mod.rs
supervictor-cloud/: CLAUDE.md  pyproject.toml  samconfig.toml  template.yaml
supervictor-cloud/hello_world/: app.py
supervictor-cloud/scripts/: gen_certs.sh  run_dev.sh  run_integration_tests.sh  run_unit_tests.sh
supervictor-cloud/tests/integration/: conftest.py  test_api_gateway.py
supervictor-cloud/tests/unit/: test_openapi.py
supervictor-cloud/utils/: Certs.sh  Deploy.sh
supervictor/cli/: Cargo.toml
supervictor/cli/src/: config.rs  lib.rs  preflight.rs  runner.rs  sam.rs  sam_tests.rs
supervictor/cli/tests/: test_config.rs  test_env.rs  test_onboard_runner.rs  test_runner.rs
supervictor/common/: Cargo.toml
supervictor/common/src/: fields.rs  routes.rs
supervictor/common/tests/: test_models.rs
supervictor/edge/: CLAUDE.md  Cargo.toml  Quickstart  build.rs  config.dev.toml  partitions.csv
supervictor/edge/.cargo/: config.toml
supervictor/edge/src/: config.rs  error.rs
supervictor/edge/tests/: mock_tcp_roundtrip.rs  sam_local_roundtrip.rs  tls_failure_handling.rs
supervictor/endpoint/: CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml  template.yaml
supervictor/endpoint/src/: error.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs
todo/: ENTERPRISE.md  UPGRADE.md  cloud-upgrade.md  deployment.md  device-staging-tests.md  esp-idf.md  esphal-upgrade.md  open-source-framework.md  orchestration.md  pin-espflash-v3.md
wire/: Cargo.toml
wire/src/: fields.rs  lib.rs  models.rs  status.rs
wire/tests/: test_models.rs
(+23 files in other folders)
