[package]
edition = "2021"
name = "supervictor"
version = "0.1.0"

# Use custom libraries
[lib]
name = "supervictor"
path = "src/lib.rs"

[[bin]]
name = "supervictor"
path = "./src/bin/main.rs"

[features]
# AI-generated: Add this feature to use environment variables for WiFi credentials
use_env = []

[dependencies]
defmt = "0.3.10"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-println = { version = "0.13.0", features = [
  "defmt-espflash",
  "esp32c3",
  "log",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
cfg-if = "1.0.0"
# esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git",  features = ["esp32c3"] }
# reqwless = { version = "0.13.0", default-features = false, features = ["log"] }
# https://serde.rs/no-std.html#no-std-support
serde = { version = "1.0.140", default-features = false, features = ["alloc"] }
serde-json-core = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
