[package]
edition = "2021"
name = "supervictor"
version = "0.1.0"

[[bin]]
name = "supervictor-embedded"
path = "./src/bin/embedded_main.rs"
required-features = ["embedded"]

[[bin]]
name = "supervictor-desktop"
path = "./src/bin/desktop_main.rs"
required-features = ["desktop"]

[features]
desktop = ["reqwest", "tokio"]
embedded = [
  "esp-alloc", 
  "esp-backtrace", 
  "esp-hal", 
  "esp-hal-embassy", 
  "esp-println", 
  "esp-wifi"
]

# Use custom libraries
[lib]
name = "supervictor"
path = "./src/lib.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "dns",
] }

reqwest = { version = "0.12.15", optional = true, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", optional = true, features = ["full"] }

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.7.0", optional = true }
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
], optional = true  }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
], optional = true }
esp-println = { version = "0.13.0", features = [
  "defmt-espflash",
  "esp32c3",
  "log",
], optional = true }
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-40960",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"], optional = true }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "wifi",
], optional = true }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde-json-core = "0.6.0"
reqwless = { version = "0.13.0", features = ["log"] }
log = "0.4.26"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
