[project]
name = "supervictor"
version = "0.1.0"
description = "Supervictor monorepo — edge device, cloud API, and CLI orchestrator"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["cloud/hello_world"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",
    "boto3>=1.34",
    "pydantic>=2.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
pythonpath = ["cloud"]
testpaths = ["cloud/tests"]
markers = [
    "local: integration tests against sam local (requires SAM_LOCAL_URL)",
    "remote: integration tests against deployed endpoint (requires API_ENDPOINT)",
    "mtls: tests exercising mTLS client certificate",
]
