[project]
name = "supervictor"
version = "0.1.0"
description = "Supervictor monorepo — edge device, cloud API, and CLI orchestrator"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
uplink = { workspace = true }

[tool.uv.workspace]
members = ["cloud/uplink"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests>=2.32.5",
    "uplink",
]

[tool.pytest.ini_options]
pythonpath = ["cloud"]
testpaths = ["cloud/tests"]
markers = [
    "local: integration tests against sam local (requires SAM_LOCAL_URL)",
    "remote: integration tests against deployed endpoint (requires API_ENDPOINT)",
    "mtls: tests exercising mTLS client certificate",
]
