[package]
name = "supervictor-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "qs"
path = "src/lib.rs"

[[bin]]
name = "qs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
supervictor-wire = { path = "../wire", features = ["alloc"] }
