[package]
edition = "2021"
name = "supervictor-device"
version = "0.1.0"

[[bin]]
name = "supervictor-embedded"
path = "./src/bin/embedded_main.rs"
required-features = ["embedded"]

[[bin]]
name = "supervictor-desktop"
path = "./src/bin/desktop_main.rs"
required-features = ["desktop"]

[features]
portal = ["embedded", "embassy-net/udp"]
desktop = ["reqwest", "tokio", "rustls", "tokio-rustls", "rustls-pemfile"]
embedded = [
  "esp-alloc",
  "esp-backtrace",
  "esp-hal",
  "esp-rtos",
  "esp-println",
  "esp-radio",
  "embassy-net",
  "embassy-executor",
  "embassy-time",
  "embedded-io",
  "embedded-io-async",
  "mbedtls-rs",
  "esp-bootloader-esp-idf",
  "esp-metadata-generated",
  "reqwless",
  "static_cell",
]

# Use custom libraries
[lib]
name = "supervictor"
path = "./src/lib.rs"

[dependencies]
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "dns",
], optional = true }

reqwest = { version = "0.12.15", optional = true, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", optional = true, features = ["full"] }

embedded-io = { version = "0.7.0", optional = true }
embedded-io-async = { version = "0.7.0", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
], optional = true }
esp-hal = { version = "1", default-features = false, features = [
  "log-04",
  "esp32c3",
  "unstable",
  "exception-handler",
], optional = true }
esp-println = { version = "0.16", features = [
  "log-04",
], optional = true }
embassy-executor = { version = "0.9.0", optional = true }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"], optional = true }
esp-rtos = { version = "0.2", features = ["esp32c3", "esp-radio", "embassy"], optional = true }
esp-radio = { version = "0.17", features = [
  "esp32c3",
  "wifi",
  "log-04",
  "unstable",
], optional = true }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", optional = true, features = ["nightly"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde-json-core = "0.6.0"
reqwless = { version = "0.13.0", default-features = false, optional = true, features = ["log"] }
log = "0.4.26"
mbedtls-rs = { git = "https://github.com/esp-rs/mbedtls-rs.git", rev = "4329f17", optional = true, features = ["log"] }
esp-bootloader-esp-idf = { version = "0.4", optional = true, features = ["esp32c3"] }
esp-metadata-generated = { version = "0.3", optional = true, features = ["esp32c3"] }
rustls = { version = "0.23.26", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
rustls = "0.23.26"
tokio-rustls = "0.26.2"
rcgen = "0.13"
