[package]
name = "supervictor-endpoint"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
dynamo = ["aws-sdk-dynamodb", "aws-config"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
supervictor-wire = { path = "../wire", features = ["alloc"] }

[dev-dependencies]
axum-test = "19"
